Setup Character and GameMode
i changed classes, so we can use our own character class with default mannequinn handling

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1477A3AB48169B3A066092AE13F122A4
-ProjectName=Third Person BP Game Template
+ProjectName=DeSaThJo
+ProjectVersion=1
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
