--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,17 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=True
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=#
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+
